--- a/index.html
+++ b/index.html
@@ -2,27 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Greeting App</title>
-  <script>
-    async function greet() {
-      const name = document.getElementById('name').value;
-      const response = await fetch(
-        'https://your-backend.onrender.com/api/greet',
-        {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ name: name })
-        }
-      );
-      const data = await response.json();
-      document.getElementById('result').innerText = data.message;
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Greet App</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-  </script>
+    .container {
+      background: #fff;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      max-width: 400px;
+      width: 100%;
+      text-align: center;
+    }
+    input {
+      width: 80%;
+      padding: 10px;
+      font-size: 16px;
+      margin-bottom: 20px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    button {
+      background: #007bff;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      font-size: 16px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+    #result {
+      margin-top: 20px;
+      font-size: 18px;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
-  <h2>Hello from Frontend</h2>
-  <input type="text" id="name" placeholder="Enter your name" />
-  <button onclick="greet()">Greet</button>
-  <p id="result"></p>
+  <div class="container">
+    <h1>Greet App</h1>
+    <input type="text" id="nameInput" placeholder="Enter your name" />
+    <br/>
+    <button onclick="sendGreet()">Greet Me</button>
+    <div id="result"></div>
+  </div>
+
+  <script>
+    function sendGreet() {
+      const name = document.getElementById('nameInput').value || 'Guest';
+      fetch("https://greetbackend.onrender.com/api/greet", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ name: name })
+      })
+      .then(response => response.json())
+      .then(data => {
+        document.getElementById('result').innerText = data.message;
+      })
+      .catch(error => {
+        console.error("Error:", error);
+        document.getElementById('result').innerText = "Something went wrong!";
+      });
+    }
+  </script>
 </body>
 </html>
